Added shwocase are

--- a/index.html
+++ b/index.html
@@ -28,8 +28,30 @@
     <!--Showcase---------------------------------------------->
     <section class="showcase">
         <div class="container grid">
-            
+            <div class="showcase-text">
+            <h1>Easier Deployment</h1>
+            <p>Deploy web apps of different types.
+                From large APIs to static websites. Fill
+                our form to try a demo. 
+            </p>
+            <a href="features.html" class="btn btn-outline">Read more</a>
+            </div>
+
+            <div class="showcase-form card">
+                <h2>Request a Demo</h2>
+                <div class="form-control">
+                    <input type="text" name="name" placeholder="Name" required>
+                </div>
+                <div class="form-control">
+                    <input type="text" name="company" placeholder="Company Name" required>
+                </div>
+                <div class="form-control">
+                    <input type="text" name="email" placeholder="Email" required>
+                </div>
+                <input type="submit" value="send" class="btn btn-primary">
+            </div>
         </div>
+        
     </section>
     <!---Showcase---------------------------------------------->
 </body>
