Added utilities css

--- a/index.html
+++ b/index.html
@@ -54,5 +54,32 @@
         
     </section>
     <!---Showcase---------------------------------------------->
+    <!---------------Stats---------------------->
+    <section class="stats">
+        <div class="container">
+            <h3 class="stats-heading text-center my-1">
+            Best platform for building applications of all types
+            with modern architecture and scaling.
+            </h3>
+            <div class="grid grid-3 text-center my-4">
+                <div>
+                    <i class="fas fa-server fa 3x"></i>
+                    <h3>10,349,650</h3>
+                    <p class="text-secondary">Live sites</p>
+                </div>
+                <div>
+                    <i class="fas fa-project-diagram fa 3x"></i>
+                    <h3>2 millions</h3>
+                    <p class="text-secondary">Projects</p>
+                </div>
+                <div>
+                    <i class="fas fa-upload fa 3x"></i>
+                    <h3>500 TB</h3>
+                    <p class="text-secondary">Published</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!----------------Stats--------------------->
 </body>
 </html>
