--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         </div>
         
     </section>
-    <!---Showcase---------------------------------------------->
-    <!---------------Stats---------------------->
+    <!-------------Showcase---------------------------------------------->
+    <!---------------Stats---------------------------------->
     <section class="stats">
         <div class="container">
             <h3 class="stats-heading text-center my-1">
@@ -80,6 +80,33 @@
             </div>
         </div>
     </section>
-    <!----------------Stats--------------------->
+    <!----------------Stats----------------------------------------->
+    <!----------------Cli-------------------------------------------->
+    <section class="cli">
+        <div class="container grid">
+            <img src="images/cli.png" alt-"">
+            <div class="card">
+                <h3>Cross platform client</h3>
+            </div>
+            <div class="card">
+                <h3>Deploy in seconds</h3>
+            </div>
+        </div>
+    </section>
+    <!-----------------Cli-------------------------------------------------->
+    <!-----------------Cloud Hosting---------------------------------->
+    <section class="cloud bg-primary my-2 py-2">
+        <div class="container grid">
+            <div class="text-center">
+                <h2 class="lg">Extreme Cloud hosting</h2>
+                <p class="lead my-1">Cloud hosting that is fast 
+                    efficient and scalable
+                </p>
+                <a href="features.html" class="btn btn-dark">Read More</a>
+            </div>
+            <img src="images/cloud.png" alt="">
+        </div>
+    </section>
+    <!------------------Cloud hosting---------------------------------------->
 </body>
 </html>
