Added media queries and languages section

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Webrr</title>
+    <title>Webify</title>
 </head>
 <body>
     <!---Navbar----------------------------------------------->
     <div class="navbar">
         <div class="container flex">
-            <h1 class="logo">Webrr</h1>
+            <h1 class="logo">Webify</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -48,7 +48,7 @@
                 <div class="form-control">
                     <input type="text" name="email" placeholder="Email" required>
                 </div>
-                <input type="submit" value="send" class="btn btn-primary">
+                <input type="submit" value="Send" class="btn btn-primary">
             </div>
         </div>
         
@@ -102,11 +102,71 @@
                 <p class="lead my-1">Cloud hosting that is fast 
                     efficient and scalable
                 </p>
-                <a href="features.html" class="btn btn-dark">Read More</a>
+                <a href="features.html" class="btn btn-light">Read More</a>
             </div>
-            <img src="images/cloud.png" alt="">
+            <img src="images/cloud2.png" alt="">
         </div>
     </section>
     <!------------------Cloud hosting---------------------------------------->
+    <!------------------Languages---------------------------------------->
+        <section class="languages">
+            <h2 class="md text-center my-2">
+                Supoorted languages
+            </h2>
+            <div class="container flex">
+                <div class="card">
+                    <h4>Node.js</h4>
+                    <img src="images/logos/node.png" alt="">
+                </div>
+                <div class="card">
+                    <h4>Ruby</h4>
+                    <img src="images/logos/ruby.png" alt="">
+                </div>
+                <div class="card">
+                    <h4>C#</h4>
+                    <img src="images/logos/csharp.png" alt="">
+                </div>
+                <div class="card">
+                    <h4>Python</h4>
+                    <img src="images/logos/python.png" alt="">
+                </div>
+                <div class="card">
+                    <h4>Scala</h4>
+                    <img src="images/logos/scala.png" alt="">
+                </div>
+                <div class="card">
+                    <h4>Go</h4>
+                    <img src="images/logos/go.png" alt="">
+                </div>
+                <div class="card">
+                    <h4>Php</h4>
+                    <img src="images/logos/php.png" alt="">
+                </div>
+            </div>
+        </section>
+    <!------------------Languages---------------------------------------->
+    <!------------------Footer---------------------------------------->
+    <footer class="footer bg-dark py-5">
+        <div class="container grid grid-3">
+            <div>
+                <h1>Webify</h1>
+                
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="features.html">Features</a></li>
+                    <li><a href="docs.html">Docs</a></li>
+                </ul>
+            </nav>
+            <div class="social">
+                <a href="#"><i class="fab fa-github fa-2x"></i></a>
+                <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+                <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+                <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+            </div>
+        </div>
+    </footer>
+    <!------------------Footer---------------------------------------->
 </body>
 </html>
