--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <!---Navbar----------------------------------------------->
     <div class="navbar">
         <div class="container flex">
-            <h1 class="logo">Webify</h1>
+            <h1 class="logo">Webify<i class="fas fa-cloud-arrow-up"></i></h1>
+            
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html">Features</a></li>
+                    <li><a href="features.html">Features</a></li>
                     <li><a href="index.html">Docs</a></li>
                 </ul>
             </nav>
@@ -149,7 +150,7 @@
     <footer class="footer bg-dark py-5">
         <div class="container grid grid-3">
             <div>
-                <h1>Webify</h1>
+                <h1>Webify<i class="fas fa-cloud-arrow-up"></i></h1>
                 
             </div>
             <nav>
