Added skeleton of Docs page

--- a/docs.html
+++ b/docs.html
@@ -70,7 +70,7 @@
                 Quo accusamus dolorum sed officiis hic?
             </p>
             <div class="alert alert-success">
-                <i class="fas fa-info">Lorem ipsum dolor sit amet laud.</i>
+                <i class="fas fa-info"></i>Lorem ipsum dolor sit amet laud.
             </div>
 
             <h3>Lorem, ipsum dolor.</h3>
