--- a/index.html
+++ b/index.html
@@ -58,24 +58,24 @@
     <!-------------Showcase---------------------------------------------->
     <!---------------Stats---------------------------------->
     <section class="stats">
-        <div class="container">
+        <div class="container grid">
             <h3 class="stats-heading text-center my-1">
             Best platform for building applications of all types
             with modern architecture and scaling.
             </h3>
             <div class="grid grid-3 text-center my-4">
                 <div>
-                    <i class="fas fa-server fa 3x"></i>
+                    <i class="fas fa-server fa-3x"></i>
                     <h3>10,349,650</h3>
                     <p class="text-secondary">Live sites</p>
                 </div>
                 <div>
-                    <i class="fas fa-project-diagram fa 3x"></i>
+                    <i class="fas fa-project-diagram fa-3x"></i>
                     <h3>2 millions</h3>
                     <p class="text-secondary">Projects</p>
                 </div>
                 <div>
-                    <i class="fas fa-upload fa 3x"></i>
+                    <i class="fas fa-upload fa-3x"></i>
                     <h3>500 TB</h3>
                     <p class="text-secondary">Published</p>
                 </div>
@@ -101,7 +101,7 @@
         <div class="container grid">
             <div class="text-center">
                 <h2 class="lg">Extreme Cloud hosting</h2>
-                <p class="lead my-1">Cloud hosting that is fast 
+                <p class="lead my-1">Cloud hosting that is fast, 
                     efficient and scalable
                 </p>
                 <a href="features.html" class="btn btn-light">Read More</a>
